# bugginout

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: AST.cpp  AST.hpp  CMakeLists.txt  CheckedAST.cpp  CheckedAST.hpp  Error.hpp  Lexer.cpp  Lexer.hpp  OperatorData.hpp  Parser.cpp  Parser.hpp  Span.cpp  Span.hpp  Token.cpp  Token.hpp  Transpiler.cpp  Transpiler.hpp  Typechecker.cpp  Typechecker.hpp  Types.hpp  boc.cpp
src/utils/: Result.hpp
